--- a/src/styles/tw_style.css
+++ b/src/styles/tw_style.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+  @apply bg-yellow-300 text-blue-800 px-4 py-2 rounded-md font-bold drop-shadow-md border-2 border-blue-800 hover:border-yellow-300 transition-all duration-300;
+}
