--- a/src/styles/tw_style.css
+++ b/src/styles/tw_style.css
@@ -1,7 +1,17 @@
+/* @import url("./utils.css"); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.btn {
-  @apply bg-yellow-300 text-blue-800 px-4 py-2 rounded-md font-bold drop-shadow-md border-2 border-blue-800 hover:border-yellow-300 transition-all duration-300;
+.header {
+  @apply w-screen h-auto;
+}
+.header__menu {
+  @apply flex self-center h-16 bg-blue-500 ml-auto mr-auto px-8 justify-between items-center border-b-4 border-blue-50;
+}
+.header__menu-items > ul {
+  @apply flex gap-5 items-center uppercase text-base text-white;
+}
+.header__link {
+  @apply text-sm hover:text-yellow-300 transition-colors duration-300;
 }
