--- a/src/styles/tw_style.css
+++ b/src/styles/tw_style.css
@@ -3,15 +3,25 @@
 @tailwind components;
 @tailwind utilities;
 
-.header {
-  @apply w-screen h-auto;
+* {
+  padding: 0;
 }
-.header__menu {
-  @apply flex self-center h-16 bg-blue-500 ml-auto mr-auto px-8 justify-between items-center border-b-4 border-blue-50;
+html {
+  @apply scroll-smooth;
 }
-.header__menu-items > ul {
-  @apply flex gap-5 items-center uppercase text-base text-white;
+body {
+  @apply bg-blue-50/95;
 }
-.header__link {
-  @apply text-sm hover:text-yellow-300 transition-colors duration-300;
+
+/* Utility Styles */
+
+.btn {
+  @apply text-sm bg-yellow-300 text-blue-800 px-4 py-2 rounded-md font-bold drop-shadow-md border-2 border-blue-800 transition-all duration-300 border-b-4 cursor-pointer;
+}
+.btn:hover {
+  @apply bg-white text-blue-800;
+}
+.container {
+  @apply sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-lg 2xl:max-w-screen-2xl;
+  @apply ml-auto mr-auto mt-20 px-2 w-full;
 }
