--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,18 +1,15 @@
 .header {
-  @apply h-auto !mt-0;
+  @apply mt-0 flex self-center h-20 bg-blue-500 ml-auto mr-auto px-8 justify-between items-center border-b-4 border-blue-50;
 }
-.header__menu {
-  @apply flex self-center h-20 bg-blue-500 ml-auto mr-auto px-8 justify-between items-center border-b-4 border-blue-50;
-}
-.header__menu-items > ul {
+.header__menu > ul {
   @apply flex gap-5 items-center uppercase text-base text-white;
 }
-.header__link {
+.header__menu-link {
   @apply text-sm hover:text-yellow-300 transition-colors duration-300;
 }
-.header__link-active {
+.link-active {
   @apply font-bold;
 }
-.header__menu-logo > img {
+.header__logo > img {
   @apply h-9;
 }
