--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -4,7 +4,7 @@
 .header__menu > ul {
   @apply flex gap-5 items-center uppercase text-base text-white;
 }
-.header__menu-link {
+.header__menu--link {
   @apply text-sm hover:text-yellow-300 transition-colors duration-300;
 }
 .link-active {
