--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,5 +1,5 @@
 .header {
-  @apply mt-0 flex self-center h-20 bg-blue-500 ml-auto mr-auto px-8 justify-between items-center border-b-4 border-blue-50;
+  @apply mt-0 flex self-center h-20 bg-blue-500/10 ml-auto mr-auto justify-between items-center border-b-4 border-blue-600 sticky top-0 z-40 backdrop-blur-lg transition-colors duration-300;
 }
 .header__menu > ul {
   @apply flex gap-5 items-center uppercase text-base text-white;
