--- a/src/styles/tw_style.css
+++ b/src/styles/tw_style.css
@@ -23,5 +23,5 @@ body {
 }
 .container {
   @apply sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-lg 2xl:max-w-screen-2xl;
-  @apply ml-auto mr-auto mt-20 px-2 w-full;
+  @apply ml-auto mr-auto w-full px-8 text-white;
 }
