--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,11 +1,11 @@
 .header {
-  @apply mt-0 flex self-center h-20 bg-blue-500/10 ml-auto mr-auto justify-between items-center border-b-4 border-blue-600 sticky top-0 z-40 backdrop-blur-lg transition-colors duration-300;
+  @apply sticky top-0 z-40 ml-auto mr-auto mt-0 flex h-20 items-center justify-between self-center border-b-4 border-blue-600 bg-blue-500/10 backdrop-blur-lg transition-colors duration-300;
 }
 .header__menu > ul {
-  @apply flex gap-5 items-center uppercase text-base text-white;
+  @apply flex items-center gap-5 text-base uppercase text-white;
 }
 .header__menu--link {
-  @apply text-sm hover:text-yellow-300 transition-colors duration-300;
+  @apply text-sm transition-colors duration-300 hover:text-yellow-300;
 }
 .link-active {
   @apply font-bold;
