finally found the purpose of using tailwindcss!

--- a/src/styles/tw_style.css
+++ b/src/styles/tw_style.css
@@ -3,25 +3,27 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  padding: 0;
-}
-html {
-  @apply scroll-smooth;
-}
-body {
-  @apply bg-blue-50/95;
-}
+@layer components {
+  * {
+    padding: 0;
+  }
+  html {
+    @apply scroll-smooth;
+  }
+  body {
+    @apply bg-blue-50/95;
+  }
 
-/* Utility Styles */
+  /* Utility Styles */
 
-.btn {
-  @apply cursor-pointer rounded-md border-2 border-b-4 border-blue-800 bg-yellow-300 px-4 py-2 text-sm font-bold text-blue-800 drop-shadow-md transition-all duration-300;
-}
-.btn:hover {
-  @apply bg-white text-blue-800;
-}
-.container {
-  @apply sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-lg 2xl:max-w-screen-2xl;
-  @apply ml-auto mr-auto w-full px-8 text-white;
+  .btn {
+    @apply cursor-pointer rounded-md border-2 border-b-4 border-blue-800 bg-yellow-300 px-4 py-2 text-sm font-bold text-blue-800 drop-shadow-md transition-all duration-300;
+  }
+  .btn:hover {
+    @apply bg-white text-blue-800;
+  }
+  .section {
+    @apply sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-lg 2xl:max-w-screen-2xl;
+    @apply ml-auto mr-auto w-full px-8 text-white;
+  }
 }
