--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,11 +5,12 @@
 @layer components {
   * {
     padding: 0;
+    line-height: calc(1em + 0.5rem);
   }
 
   /* Utility Styles */
 
   .btn {
-    @apply cursor-pointer rounded-md border-2 border-b-4 border-blue-800 bg-yellow-300 px-4 py-2 text-base font-bold tracking-wider text-blue-800 drop-shadow-md transition-all duration-300 hover:bg-white;
+    @apply cursor-pointer rounded-md border-2 border-b-4 border-blue-800 bg-yellow-300 px-4 py-2 text-base font-bold tracking-tighter text-blue-800 drop-shadow-md transition-all duration-300 hover:bg-white;
   }
 }
