--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -14,7 +14,7 @@
     @apply cursor-pointer rounded-md border-2 border-b-4 border-blue-800 bg-yellow-300 px-4 py-2 text-base font-bold tracking-tighter text-blue-800 drop-shadow-md transition-all duration-300 hover:bg-white;
   }
   .btn-footer {
-    @apply flex items-center rounded-md bg-[#24292F] px-5 py-2.5 text-center text-base font-bold text-white hover:bg-[#24292F]/90 focus:outline-none focus:ring-4 focus:ring-[#24292F]/50;
+    @apply flex items-center rounded-md bg-blue-500 py-5 text-center font-bold leading-6 tracking-widest text-white hover:bg-blue-500/90 focus:outline-none focus:ring-4 focus:ring-blue-900;
   }
   .avater-stacked {
     @apply h-14 w-14 rounded-full border ring ring-blue-800/30 ring-offset-1;
